# NaikeXTheShriks

./: settings.gradle.kts
nayki-backend/: .env.example  Dockerfile  Makefile  README.md  TESTING_AND_VALIDATION.md  alembic.ini  docker-compose.yml  pyproject.toml
nayki-backend/alembic/: env.py  script.py.mako
nayki-backend/alembic/versions/: 001_initial.py  002_routes_incidents_sos.py
nayki-backend/app/: config.py  database.py  logging.py  main.py
nayki-backend/app/api/: auth.py  health.py  incidents.py  places.py  privacy.py  router.py  routes.py  safety.py  sos.py  users.py
nayki-backend/app/domain/: enums.py  errors.py  models.py
nayki-backend/app/integrations/: fcm_client.py  google_places_client.py  google_routes_client.py  graphhopper_client.py  osm_overpass_client.py
nayki-backend/app/repositories/: audit_repo.py  devices_repo.py  incidents_repo.py  poi_repo.py  routes_repo.py  safety_repo.py  sos_repo.py  users_repo.py
nayki-backend/app/schemas/: auth.py  incidents.py  places.py  privacy.py  routes.py  safety.py  sos.py  users.py
nayki-backend/app/security/: dependencies.py  firebase_auth.py
nayki-backend/app/services/: auth_service.py  incident_service.py  notification_service.py  place_service.py  privacy_guard.py  privacy_service.py  routing_service.py  safety_engine.py  sos_service.py
nayki-backend/app/utils/: geo.py  h3_utils.py  time.py
nayki-backend/app/workers/: tasks.py
nayki-backend/tests/: conftest.py  test_auth.py  test_h3_utils.py  test_health.py  test_part2.py  test_safety.py  test_safety_engine.py  test_users.py
(+33 files in other folders)
