[project]
name = "nayki-backend"
version = "0.1.0"
description = "Production backend foundation for Nayki safety-navigation app"
authors = [
    { name = "The Shriks", email = "info@theshriks.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.28",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.18",
    "redis>=5.0.2",
    "h3>=3.7.6",
    "GeoAlchemy2>=0.14.6",
    "shapely>=2.0.3",
    "python-jose[cryptography]>=3.3.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC", "S", "B", "C4", "PT", "ARG", "PTH", "RUF"]
ignore = ["S101", "D100", "D104"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
